# cell-filter

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: analysis.py
src/cell_filter/: __init__.py  __main__.py  _lib.py  lib.py
