[project]
name = "cell-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "noam teyssier", email = "22600644+noamteyssier@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["anndata>=0.12.1", "tqdm>=4.67.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "marimo>=0.14.16",
    "matplotlib>=3.10.5",
    "polars>=1.32.1",
    "pyinstrument>=5.0.3",
    "ruff>=0.12.8",
    "seaborn>=0.13.2",
]
